--- a/GymTracker/GymTracker.csproj
+++ b/GymTracker/GymTracker.csproj
@@ -1364,7 +1364,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\TrainerViewModels\" />
+    <Folder Include="Models\MockRepositories\" />
+    <Folder Include="Models\RepositoryInterfaces\" />
+    <Folder Include="Models\Repositories\" />
   </ItemGroup>
 
 </Project>
