--- a/GymTracker/GymTracker.csproj
+++ b/GymTracker/GymTracker.csproj
@@ -1363,4 +1363,8 @@
     <TypeScriptCompile Include="wwwroot\bower_components\moment\moment.d.ts" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Uploads\" />
+  </ItemGroup>
+
 </Project>
