--- a/GymTracker/appsettings.json
+++ b/GymTracker/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:gymtracker.database.windows.net,1433;Initial Catalog=GymTracker;Persist Security Info=False;User ID=mainlogin;Password=Coca2018Cola;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    "DefaultConnection": "Server=tcp:gymtrackers.database.windows.net,1433;Initial Catalog=GymTracker;Persist Security Info=False;User ID=mainlogin;Password=CocaCola2018;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "Logging": {
     "IncludeScopes": false,
